<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D3CECE"
    android:orientation="vertical">


    <LinearLayout
        android:id="@+id/ViewLayout"
        android:layout_width="400dp"
        android:layout_height="500dp"
        android:orientation="horizontal"
        tools:context=".MainActivity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/MainLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/HOME_Button"
            style="@android:style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:insetLeft="0dp"
            android:insetRight="0dp"
            android:text="@string/HOME"
            android:textColor="#FF0000"
            android:textSize="18sp"
            app:backgroundTint="#8A8484"
            app:icon="@drawable/icon_home2"
            app:iconSize="40dp"
            app:iconTint="#FF0000" />


        <Button
            android:id="@+id/CLIENT_Button"
            style="@android:style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:insetLeft="0dp"
            android:insetRight="0dp"
            android:text="@string/USER"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:backgroundTint="#8A8484"
            app:icon="@drawable/icon_user2"
            app:iconSize="40dp"
            app:iconTint="#FFFFFF" />

        <Button
            android:id="@+id/PHOTO_Button"
            style="@android:style/Widget.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="1"
            android:insetLeft="0dp"
            android:insetRight="0dp"
            android:text="@string/PHOTO"
            android:textColor="#FFFFFF"
            android:textSize="18sp"
            app:backgroundTint="#8A8484"
            app:icon="@drawable/icon_photo2"
            app:iconSize="40dp"
            app:iconTint="#FFFFFF" />

    </LinearLayout>

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#D3CECE"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="10"
            tools:listitem="@layout/client_row"/>

        <LinearLayout
            android:layout_weight="30"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <EditText
                android:background="@color/cardview_dark_background"
                android:gravity="center"
                android:hint="@string/Imie"
                android:layout_weight="1"
                android:id="@+id/imieInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
            <EditText
                android:background="@color/cardview_dark_background"
                android:gravity="center"
                android:hint="@string/Nazwisko"
                android:layout_weight="1"
                android:id="@+id/nazwiskoInput"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </LinearLayout>
        <Button
            android:text="Wyślij do bazy"
            android:layout_weight="30"
            android:id="@+id/submitData"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>-->
</LinearLayout>